--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
   "bugs": {
     "url": "https://github.com/mivicek/request-header-parser-microservice/issues"
   },
-  "homepage": "https://github.com/mivicek/request-header-parser-microservice#readme"
+  "homepage": "https://github.com/mivicek/request-header-parser-microservice#readme",
+  "dependencies": {
+    "express": "^4.14.1"
+  }
 }
